test/files/neg/bug565.check
bug565.scala:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var s0: String
      ^
one error found
